--- a/HTML/1_tags.html
+++ b/HTML/1_tags.html
@@ -1,11 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tags in HTML</title>
 </head>
+
 <body>
-    
+    <h1>Html starts from here </h1>
+    <hr>
+    <br>
+    <p>this <ins>page</ins> <b>gives</b> info <strong>about</strong> <big>structure</big> of <code>website</code></p>
+    <a style="display: block;" href="https:google.com" target="_blank" draggable="true">Go To google</a>
+    <a href="mailto:arunmadhopur750@gmail.com">Email</a>
+    <img src="https://picsum.photos/121" alt="" width="400px" height="300px">
+
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+
+
+    <section>
+        <audio controls src="tryme.mp3">
+            <a href="tryme.mp3""> Download audio </a>
+            </audio>
+    </section>
+
+    <details>
+        <summary>Details</summary>
+        Something will open after clicking on button
+    </details>
+
+    <progress max="100" value="90">90%</progress>
+
+
 </body>
+
 </html>
